<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:text="@string/email_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/main_margin"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/second_value"
        app:layout_constraintEnd_toEndOf="@+id/second_value"
        app:layout_constraintStart_toStartOf="@+id/second_value" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/first_value"
        app:layout_constraintEnd_toEndOf="@+id/first_value"
        app:layout_constraintStart_toStartOf="@+id/first_value" />


    <EditText
        android:id="@+id/first_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/second_value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

    <TextView
        android:id="@+id/resultCompute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="x"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/first_value"
        app:layout_constraintEnd_toStartOf="@+id/second_value"
        app:layout_constraintStart_toEndOf="@+id/first_value"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/compute_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/second_value"
        app:layout_constraintStart_toEndOf="@+id/first_value"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <EditText
        android:id="@+id/second_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/first_value"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />
</androidx.constraintlayout.widget.ConstraintLayout>